fix nav spacing

--- a/components/nav/mobile/footer.module.css
+++ b/components/nav/mobile/footer.module.css
@@ -6,6 +6,7 @@
     background-color: var(--bs-body-bg);
     border-top: 1px solid var(--theme-toolbarActive);
     z-index: 1000;
+    padding-bottom: 1.5rem;
 }
 
 .footerNav {
